[gd_scene load_steps=7 format=3 uid="uid://fkvol62t77hi"]

[ext_resource type="Script" uid="uid://c0kgxj8osawap" path="res://main/main.gd" id="1_53q0u"]
[ext_resource type="Shader" uid="uid://boimpg58mcxao" path="res://shaders/balatro.gdshader" id="2_3wy1v"]
[ext_resource type="PackedScene" uid="uid://bpdfkdilgr0dt" path="res://ui/GameUI.tscn" id="3_c651c"]
[ext_resource type="PackedScene" uid="uid://c1pyhqepqvc3p" path="res://ui/menu/ScoresMenuOverlay.tscn" id="4_3wy1v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kfbq2"]
shader = ExtResource("2_3wy1v")
shader_parameter/spin_rotation_speed = 2.0
shader_parameter/move_speed = 7.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.964706, 0.803922, 0.14902, 1)
shader_parameter/colour_2 = Color(0.14902, 0.717647, 0.964706, 1)
shader_parameter/colour_3 = Color(0.12549, 0.12549, 0.12549, 1)
shader_parameter/contrast = 3.5
shader_parameter/lighting = 0.4
shader_parameter/spin_amount = 0.25
shader_parameter/pixel_filter = 740.0
shader_parameter/is_rotating = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wy1v"]

[node name="Main" type="Node2D"]
script = ExtResource("1_53q0u")

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(550, 1050)

[node name="Container" type="Control" parent="."]
custom_minimum_size = Vector2(1100, 2100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1100.0
offset_bottom = 2100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background" type="Panel" parent="Container"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_kfbq2")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1050.0
offset_right = 1050.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3wy1v")

[node name="GameUI" parent="Container" instance=ExtResource("3_c651c")]
unique_name_in_owner = true
layout_mode = 1

[node name="ScoresMenuOverlay" parent="Container" instance=ExtResource("4_3wy1v")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_top = -2100.0
offset_bottom = -2100.0

[connection signal="show_menu" from="Container/GameUI" to="." method="_on_main_ui_show_menu"]
[connection signal="hide_menu_pressed" from="Container/ScoresMenuOverlay" to="." method="_on_menu_overlay_hide_menu_pressed"]
[connection signal="new_game_pressed" from="Container/ScoresMenuOverlay" to="." method="_on_game_over_overlay_new_game_pressed"]
